force-app/main/default/objects/Case/fields/TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>TerminationDate__c</fullName>
    <label>Date d&#39;effet de la résiliation</label>
    <type>Date</type>
</CustomField>