force-app/main/default/objects/Case/fields/UnderRaisons__c.field-meta.xml
<CustomField>
    <fullName>UnderRaisons__c</fullName>
    <label>Sous motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ReasonsTermination__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrêt des diffusions</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Liquidation</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Dissolution</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Redressement</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Opposition à vente</fullName>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>