force-app/main/default/objects/Case/recordTypes/ContacterSupport.recordType-meta.xml
<RecordType>
    <fullName>ContacterSupport</fullName>
    <active>true</active>
    <businessProcess>Demande client de résiliation</businessProcess>
    <description>Type d&#39;enregistrement de case pour la communauté</description>
    <label>Contacter Support</label>
</RecordType>