force-app/main/default/objects/Case/validationRules/Case01_IfOthers_ValueOther.validationRule-meta.xml
<ValidationRule>
    <fullName>Case01_IfOthers_ValueOther</fullName>
    <active>true</active>
    <errorConditionFormula>$User.BypassVR__c = False &amp;&amp; ISBLANK( Other__c ) &amp;&amp;
(ISPICKVAL( ReasonsTermination__c  ,&quot;Autre&quot;) 
|| 
ISPICKVAL( ReasonsTermination__c ,&quot;Modification de déclaration&quot;)
|| 
ISPICKVAL( ReasonsTermination__c ,&quot;Erreur d&#39;autorisation&quot;)
)</errorConditionFormula>
    <errorMessage>Merci de saisir un sous motif dans le champ &quot; Autre&quot; pour ce motif de résiliation</errorMessage>
</ValidationRule>