force-app/main/default/objects/Case/listViews/Delegation_Paris_Case.listView-meta.xml
<ListView>
    <fullName>Delegation_Paris_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Délégation Paris</label>
    <queue>Delegation_Paris</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>