force-app/main/default/objects/Case/listViews/MyClosedCases.listView-meta.xml
<ListView>
    <fullName>MyClosedCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Fermée</value>
    </filters>
    <label>Mes requêtes clôturées</label>
    <sharedTo>
        <allCustomerPortalUsers/>
    </sharedTo>
</ListView>