force-app/main/default/objects/Case/listViews/Online_Case.listView-meta.xml
<ListView>
    <fullName>Online_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Online</label>
    <queue>Online</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>